--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="login-box" style="margin-top:-200px" id="login-box">
+  <div class="login-box" style="margin-top:-150px" id="login-box">
     <div class="title">Create account</div>
     <br />
     <form action="/signup" method="post">
@@ -23,8 +23,9 @@
         <% } %>
       </div>
       <br />
-      <button class="login-button" type="submit">Create</button><br />
+      <button class="login-button" type="submit">Create</button><br /><br />
     </form>
+    <a href="/" style="font-size:11px; text-decoration:none; color:black;">back to login</a>
     <br />
     <div id="errors" style="color:red; font-size:12px;"></div>
     <div id="success" style="color:green; font-size:12px;"></div>
