--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,7 @@
   padding-left: 205px;
   padding-right: 10px;
 }
+
 .db-title {
   font-weight: 300;
   color: #4d6bff;
@@ -44,6 +45,13 @@
   padding-bottom: 5px;
   border-bottom: 1px solid #4d6bff;
   padding-left: 205px;
+}
+
+.db-name-entry {
+  font-weight: 300;
+  color: #4d6bff;
+  font-size: 25px;
+  padding-bottom: 5px;
 }
 
 .sidebar {
