gets token, needs to pass to file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <div class="login-box" id="login-box">
     <div class="title">Lensflare</div>
     <br />
-    <form action="/" method="post">
+    <form action="/jwt" method="post">
       Email:<br /><input class="text-box" name="email" type="text"></input><br />
       Password:<br /><input class="text-box" name="password" type="password"></input>
       <br />
