--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
         <% } %> -->
       </div>
       <br />
-      <button class="login-button" type="submit">Submit</button><br /><br />
+      <button class="login-button" onclick="signin">Submit</button><br /><br />
     </form>
     <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
   </div>
