--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="utf-8">
     <link href="style/style.css" rel="stylesheet" type="text/css">
+    <script src="scripts/actions.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="actions/actions.js"></script>
 </head>
 
 
