--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,35 +1,35 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
+    <meta charset="utf-8">
+    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <script src="scripts/actions.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
 </head>
 
 <body>
-  <div class="login-box" style="margin-top:-150px" id="login-box">
+<div class="login-box" style="margin-top:-150px" id="login-box">
     <div class="title">Create account</div>
-    <br />
-    <form action="/signup" method="post">
-      Name*<br /><input class="text-box" name="name" id="name" type="text"></input><br />
-      Email*<br /><input class="text-box" name="username" id="email" type="text"></input>
-      Password*<br /><input class="text-box" name="password" id="pass1" type="password"></input>
-      Re-enter password*<br /><input class="text-box" id="pass2" type="password"></input>
-      <br />
-      <div style="color:red; font-size:12px">
-        <% if (message.length > 0) { %>
-          <%= message %>
-        <% } %>
-      </div>
-      <br />
-      <button class="login-button" type="submit">Create</button><br /><br />
-    </form>
+    <br/>
+        Name*<br/><input class="text-box" name="name" id="name" type="text"></input><br/>
+        Email*<br/><input class="text-box" name="username" id="email" type="text"></input>
+        Password*<br/><input class="text-box" name="password" id="pass1" type="password"></input>
+        Re-enter password*<br/><input class="text-box" id="pass2" type="password"></input>
+        <br/>
+        <div style="color:red; font-size:12px">
+            <!--<% if (message.length > 0) { %>-->
+            <!--<%= message %>-->
+            <!--<% } %>-->
+        </div>
+        <br/>
+        <button class="login-button" onclick="signUp()" type="submit">Create</button>
+        <br/><br/>
     <a href="/" style="font-size:11px; text-decoration:none; color:black;">back to login</a>
-    <br />
+    <br/>
     <div id="errors" style="color:red; font-size:12px;"></div>
     <div id="success" style="color:green; font-size:12px;"></div>
-  </div>
+</div>
 </body>
 </html>
 
