redirects if logged in

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,22 +7,27 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
+<script>
+if (localStorage.getItem("token")) {
+    window.location.href = "/database";
+}
+</script>
 
 <body>
-<div class="login-box" id="login-box">
-    <div class="title">Lensflare</div>
-    <br/>
-    Email:<br/><input class="text-box" id="email" type="text"></input><br/>
-    Password:<br/><input class="text-box" id="password" type="password"></input>
-    <br/>
-    <div style="color:red; font-size:12px">
-        <!-- <% if (message.length > 0) { %>
-          <%= message %>
-        <% } %> -->
-    </div>
-    <br/>
-    <button class="login-button" onclick="signIn()">Submit</button>
-    <br/><br/>
-    <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
-</div>
+  <div class="login-box" id="login-box">
+      <div class="title">Lensflare</div>
+      <br/>
+      Email:<br/><input class="text-box" id="email" type="text"></input><br/>
+      Password:<br/><input class="text-box" id="password" type="password"></input>
+      <br/>
+      <div style="color:red; font-size:12px">
+          <!-- <% if (message.length > 0) { %>
+            <%= message %>
+          <% } %> -->
+      </div>
+      <br/>
+      <button class="login-button" onclick="signIn()">Submit</button>
+      <br/><br/>
+      <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
+  </div>
 </body>
