--- a/public/views/database.html
+++ b/public/views/database.html
@@ -3,24 +3,21 @@
   <meta charset="utf-8">
   <link href="style/style.css" rel="stylesheet" type="text/css">
   <script src="scripts/database.js"></script>
+  <script src="scripts/actions.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
 </head>
 
 <body onload="loadInit()">
   <div id="sidebar" class="sidebar">
     <div class="spaces-title">Lensflare</div>
-    Welcome, <%= user.local.name %>!<br /><br />
+    Welcome!<br /><br />
     <div id="space-links"></div>
   </div>
-  <div class="logout-button"><form action="/logout" method="get">
-    <button class="logout" type="submit" value="logout">logout</button>
-  </form></div>
+  <div class="logout-button">
+    <button class="logout" onclick="logout()" value="logout">logout</button>
+  </div>
   <div id="db-name" class="db-title"></div>
   <div id="content" class="db-content">
     <table id="db-table" class="db-table"/>
   </div>
 </body>
-
-
-
-
