error messages to user

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,7 +20,7 @@ if (localStorage.getItem("token")) {
       Email:<br/><input class="text-box" id="email" type="text"></input><br/>
       Password:<br/><input class="text-box" id="password" type="password"></input>
       <br/>
-      <div style="color:red; font-size:12px">
+      <div id="message" style="color:red; font-size:12px">
       </div>
       <br/>
       <button class="login-button" onclick="signIn()">Submit</button>
