--- a/public/views/database.html
+++ b/public/views/database.html
@@ -2,8 +2,9 @@
 <head>
   <meta charset="utf-8">
   <link href="style/style.css" rel="stylesheet" type="text/css">
-  <script src="scripts/database.js"></script>
   <script src="scripts/actions.js"></script>
+  <script src="scripts/database.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
 </head>
 
