--- a/public/views/database.html
+++ b/public/views/database.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
 </head>
 
-<body onload="loadInit()">
+<body onload="loadSpaces()">
   <div id="sidebar" class="sidebar">
     <div class="spaces-title">Lensflare</div>
     Welcome!<br /><br />
