added mock data button

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -13,7 +13,10 @@
     <div class="spaces-title">Lensflare</div>
 
     <div id="space-links"></div>
+
+    <button onclick="loadMockData()" value="logout">loadMockData</button>
   </div>
+
   <div class="logout-button">
     <button class="logout" onclick="logout()" value="logout">logout</button>
   </div>
