add API route to add item to spaces

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -14,7 +14,8 @@
 
     <div id="space-links"></div>
 
-    <button onclick="loadMockData()" value="logout">loadMockData</button>
+        <button onclick="loadMockData()" value="logout">loadMockData</button>
+            <button onclick="addItemTest()" value="logout">add item test</button>
   </div>
 
   <div class="logout-button">
