save alert stylign

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -8,14 +8,16 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
 </head>
 
+
 <body onload="loadSpaces()">
+  <div id="db-messages" class="db-messages"></div>
   <div id="sidebar" class="sidebar">
     <div class="spaces-title">Lensflare</div>
 
     <div id="space-links"></div>
 
         <button onclick="loadMockData()" value="logout">loadMockData</button>
-            <button onclick="addItemTest()" value="logout">add item test</button>
+        <button onclick="addItemTest()" value="logout">add item test</button>
   </div>
 
   <div class="logout-button">
