--- a/public/style/style.css
+++ b/public/style/style.css
@@ -47,6 +47,23 @@
   padding-left: 205px;
 }
 
+.db-messages {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  font-weight: 300;
+  background-color: #84BE6A;
+  padding-top: 3px;
+  color: #ffffff;
+  font-size: 16px;
+  border-bottom: none;
+  /*display: none;*/
+  opacity: 0;
+  padding-left: 205px;
+  height: 25px;
+}
+
 .db-name-entry {
   font-weight: 300;
   color: #4d6bff;
