--- a/public/style/style.css
+++ b/public/style/style.css
@@ -51,7 +51,7 @@
   right: 0;
   left: 0;
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   font-weight: 300;
   background-color: #84BE6A;
