--- a/public/views/database.html
+++ b/public/views/database.html
@@ -9,16 +9,6 @@
   <script src="scripts/database.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
-  <style>
-
-    #c {
-      position: fixed;
-      left: 0px;
-      width: 100%;
-      height: 100%;
-    }
-
-  </style>
   <title>three.js webgl - multiple elements</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -27,7 +17,7 @@
 
 <body onload="loadSpaces()">
 
-  <canvas id="c"></canvas>
+  <canvas id="c" style="z-index: 0"></canvas>
 
   <div id="db-messages" class="db-messages"></div>
   <div id="sidebar" class="sidebar">
@@ -42,6 +32,6 @@
   </div>
   <div id="db-name" class="db-title"></div>
   <div id="content" class="db-content">
-    <table id="db-table" class="db-table"/>
+    <table id="db-table" class="db-table"style="z-index: 10"/>
   </div>
 </body>
