fixed random floating mesh

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -9,9 +9,8 @@
   <script src="scripts/database.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
-  <title>three.js webgl - multiple elements</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+  <title>Lensflare</title>
 
 </head>
 
