--- a/public/views/database.html
+++ b/public/views/database.html
@@ -22,8 +22,9 @@
   <div id="sidebar" class="sidebar">
     <div class="spaces-title">Lensflare</div>
     <div id="space-links"></div>
-    <button onclick="loadMockData()" value="logout">loadMockData</button>
-    <button onclick="addItemTest()" value="logout">add item test</button>
+    <br /><br /><br /><br />
+    <button class="test-button" onclick="loadMockData()" value="logout">loadMockData</button>
+    <button class="test-button" onclick="addItemTest()" value="logout">add item test</button>
   </div>
 
   <div class="logout-button">
