--- a/public/views/database.html
+++ b/public/views/database.html
@@ -33,11 +33,14 @@
     <button class="test-button" onclick="addItemTest()" value="logout">add item test</button> -->
   </div>
 
-  <div class="logout-button">
-    <button class="logout" onclick="logout()" value="logout">logout</button>
-  </div>
   <div id="db-name" class="db-title"></div>
+
   <div id="content" class="db-content">
     <table id="db-table" class="db-table"style="z-index: 10"/>
+  </div>
+
+  <div class="footer-box">
+    <button class="logout" onclick="logout()" value="logout">privacy policy</button>
+    <button class="logout" onclick="logout()" value="logout">logout</button>
   </div>
 </body>
