--- a/public/style/style.css
+++ b/public/style/style.css
@@ -21,7 +21,6 @@
   margin-top: -105px;
   margin-left: -160px;
   line-height: 150%;
-  background: white;
 }
 
 .db-content {
@@ -36,7 +35,6 @@
   font-size: 25px;
   padding-bottom: 5px;
   /*border-bottom: 1px solid #4d6bff;*/
-  text-align: center;
   padding-left: 205px;
 }
 
@@ -252,6 +250,10 @@
   position: fixed;
   width: 100px;
   height: 100%;
+}
+
+input {
+  autocomplete: "off";
 }
 
 body {
