--- a/public/views/database.html
+++ b/public/views/database.html
@@ -3,7 +3,9 @@
   <meta charset="utf-8">
   <link href="style/style.css" rel="stylesheet" type="text/css">
 
-  <script src="scripts/libraries/three.min.js"></script>
+    <script src="scripts/libraries/three.min.js"></script>
+    <script src="scripts/libraries/qrcode.js"></script>
+    <script src="scripts/libraries/jquery.min.js"></script>
 
   <script src="scripts/actions.js"></script>
   <script src="scripts/database.js"></script>
@@ -17,6 +19,8 @@
 <body onload="loadSpaces()">
 
   <canvas id="c" style="z-index: 0"></canvas>
+
+  <div id='qr-popover' class='qr-popover'></div>
 
   <div id="db-messages" class="db-messages"></div>
   <div id="sidebar" class="sidebar">
