styling and functionality of qr codes -d one

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -18,8 +18,10 @@
 
 <body onload="loadSpaces()">
 
-  <canvas id="c" style="z-index: 0"></canvas>
 
+  <div id='overlay' class='overlay'></div>
+  <canvas id="c" style="z-index: 0"></canvas>
+  
   <div id='qr-popover' class='qr-popover'></div>
 
   <div id="db-messages" class="db-messages"></div>
