--- a/public/style/style.css
+++ b/public/style/style.css
@@ -134,13 +134,29 @@
 .qr-popover {
   position: absolute;
   display: none;
-  top: 75px;
-  left: 215px;
+  top: 50%;
+  left: 50%;
+  margin-left: -127px;
+  margin-top: -137px;
+  width: 255px;
+  height: 275px;
   background: white;
   border: 1px solid black;
   padding: 10px;
+  z-index: 10;
 }
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+  background: black;
+  display: none;
+  z-index: 1;
+}
 
 .qr-close-button {
   font-family: 'Raleway', sans-serif;
