--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,7 +14,8 @@ if (localStorage.getItem("token")) {
 </script>
 
 <body>
-  <div class="login-box" id="login-box">
+  <div class="splash-body">
+    <div class="login-box" id="login-box">
       <div class="title">Lensflare</div>
       <br/>
       Email:<br/><input class="text-box" id="email" type="text"></input><br/>
@@ -26,5 +27,6 @@ if (localStorage.getItem("token")) {
       <button class="login-button" onclick="signIn()">Submit</button>
       <br/><br/>
       <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
+    </div>
   </div>
 </body>
