--- a/public/style/style.css
+++ b/public/style/style.css
@@ -6,10 +6,12 @@
 
 .spaces-title {
   font-weight: 300;
-  color: #4d6bff;
+  color: white;
   font-size: 35px;
   padding-top: 15px;
   padding-bottom: 15px;
+  height: 40px;
+  background: #4d6bff;
 }
 
 .login-box {
@@ -31,11 +33,15 @@
 
 .db-title {
   font-weight: 300;
-  color: #4d6bff;
   font-size: 25px;
   padding-bottom: 5px;
   /*border-bottom: 1px solid #4d6bff;*/
   padding-left: 205px;
+  text-align: center;
+  height: 65px;
+  color: #4d6bff;
+  padding-top: 10px;
+  height: 40px;
 }
 
 .db-messages {
@@ -74,15 +80,17 @@
 }
 
 .sidebar {
-  /*background-color: #f0f0f0;*/
+  background-color: #4d6bff;
   /*background-color: #ffffff;*/
   position: fixed;
-  width: 190px;
+  width: 200px;
   /*border-right: 1px solid #4d6bff;*/
   height: 100%;
   top: 0px;
   padding-left: 5px;
   line-height: 200%;
+  left: 0px;
+  color: white;
 }
 
 .db-table th {
@@ -166,7 +174,7 @@
   border: none;
   font-family: 'Raleway', sans-serif;
   cursor: pointer;
-  color: #4d6bff;
+  color: white;
   font-size: 14px;
 }
 
@@ -174,12 +182,10 @@
   position: fixed;
   bottom: 0;
   width: 203px;
-  left: 50%;
-  margin-left: -101px;
   /*background-color: #4d6bff;*/
-  color: #4d6bff;
+  color: white;
   text-align: center;
-  /*left: 0;*/
+  left: 0;
   font-size: 16px;
   height: 25px;
   padding-top: 3px;
@@ -220,6 +226,7 @@
 .delete-space-button {
   background-color: inherit;
   border: none;
+  color: white;
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   position: fixed;
@@ -259,10 +266,22 @@ input {
 body {
   font-family: 'Raleway', sans-serif;
   margin-right:0px;
+  /*background: -webkit-linear-gradient(left, #ffffff, #e2e7ff);
+  background: -o-linear-gradient(left, #ffffff, #e2e7ff);
+  background: -moz-linear-gradient(left, #ffffff, #e2e7ff);
+  background: linear-gradient(left, #ffffff, #e2e7ff);*/
+}
+
+.splash-body {
+  font-family: 'Raleway', sans-serif;
+  margin-right:0px;
   background: -webkit-linear-gradient(left, #ffffff, #e2e7ff);
   background: -o-linear-gradient(left, #ffffff, #e2e7ff);
   background: -moz-linear-gradient(left, #ffffff, #e2e7ff);
   background: linear-gradient(left, #ffffff, #e2e7ff);
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 button:focus {
