--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="splash-body">
 <div class="login-box" style="margin-top:-150px" id="login-box">
     <div class="title">Create account</div>
     <br/>
@@ -25,6 +26,7 @@
     <br/>
     <div id="errors" style="color:red; font-size:12px;"></div>
     <div id="success" style="color:green; font-size:12px;"></div>
+</div>
 </div>
 </body>
 </html>
