--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,7 +18,7 @@ if (localStorage.getItem("token")) {
     <div class="login-box" id="login-box">
       <div class="title">Lensflare</div>
       <br/>
-      Email:<br/><input class="text-box" id="email" type="text"></input><br/>
+      Email:<br/><input class="text-box" id="email" type="text" autocomplete="off"></input><br/>
       Password:<br/><input class="text-box" id="password" type="password"></input>
       <br/>
       <div id="message" style="color:red; font-size:12px">
