restyling home/splash - new colors

--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -22,7 +22,7 @@
         <br/>
         <button class="login-button" onclick="signUp()" type="submit">Create</button>
         <br/><br/>
-    <a href="/" style="font-size:11px; text-decoration:none; color:black;">back to login</a>
+    <a href="/" style="font-size:11px; text-decoration:none; color:white;">back to login</a>
     <br/>
     <div id="errors" style="color:red; font-size:12px;"></div>
     <div id="success" style="color:green; font-size:12px;"></div>
