--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,7 @@
 .title {
   font-weight: 300;
-  color: #4d6bff;
+  /*color: #3B3C59;*/
+  color: white;
   font-size: 40px;
 }
 
@@ -11,7 +12,7 @@
   padding-top: 15px;
   padding-bottom: 15px;
   height: 40px;
-  background: #4d6bff;
+  background: #3B3C59;
 }
 
 .login-box {
@@ -35,11 +36,11 @@
   font-weight: 300;
   font-size: 25px;
   padding-bottom: 10px;
-  /*border-bottom: 1px solid #4d6bff;*/
+  /*border-bottom: 1px solid #3B3C59;*/
   padding-left: 205px;
   text-align: center;
   height: 65px;
-  color: #4d6bff;
+  color: #3B3C59;
   padding-top: 10px;
   height: 40px;
 }
@@ -64,7 +65,7 @@
 
 .db-name-entry {
   font-weight: 300;
-  color: #4d6bff;
+  color: #3B3C59;
   font-size: 25px;
   padding-bottom: 5px;
 }
@@ -72,7 +73,7 @@
 .db-name-save-button {
   background: inherit;
   font-weight: 300;
-  color: #4d6bff;
+  color: #3B3C59;
   font-size: 15px;
   padding-bottom: 5px;
   border: none;
@@ -80,11 +81,11 @@
 }
 
 .sidebar {
-  background-color: #4d6bff;
+  background-color: #3B3C59;
   /*background-color: #ffffff;*/
   position: fixed;
   width: 200px;
-  /*border-right: 1px solid #4d6bff;*/
+  /*border-right: 1px solid #3B3C59;*/
   height: 100%;
   top: 0px;
   padding-left: 5px;
@@ -101,12 +102,12 @@
 .db-table td {
   vertical-align: top;
   padding: 7px;
-  border: 1px solid #4d6bff;
+  border: 1px solid #3B3C59;
 }
 
 .db-table {
   width: 100%;
-  border: 1px solid #4d6bff;
+  border: 1px solid #3B3C59;
   border-collapse: collapse;
 }
 
@@ -178,7 +179,7 @@
   position: fixed;
   bottom: 0;
   width: 203px;
-  /*background-color: #4d6bff;*/
+  /*background-color: #3B3C59;*/
   color: white;
   text-align: center;
   left: 0;
@@ -196,17 +197,6 @@
   border: 1px solid #dbe1ff;
   border-radius: 4px;
   padding: 2px;
-}
-.login-button {
-  font-family: 'Raleway', sans-serif;
-  width: 100px;
-  font-size: 12px;
-  background-color: white;
-  border: 1px solid #4d6bff;
-  border-radius: 5px;
-  padding: 3px;
-  /*transition-duration: 0.4s;*/
-  /*-webkit-transition-duration: 0.4s;*/
 }
 
 .input-text {
@@ -240,9 +230,24 @@
   cursor: pointer;
 }
 
+.login-button {
+  font-family: 'Raleway', sans-serif;
+  width: 100px;
+  font-size: 12px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 3px;
+  /*transition-duration: 0.4s;*/
+  /*-webkit-transition-duration: 0.4s;*/
+}
+
 .login-button:hover {
-  /*border: 2px solid #4d6bff;*/
-  box-shadow: 0 2px 15px #dbe1ff;
+  /*border: 2px solid #3B3C59;*/
+  /*box-shadow: 0 2px 15px #dbe1ff;*/
+  color: #3B3C59;
+  background-color: white;
 }
 
 .edit-button:hover {
@@ -271,15 +276,16 @@ body {
 .splash-body {
   font-family: 'Raleway', sans-serif;
   margin-right:0px;
-  background: -webkit-linear-gradient(left, #ffffff, #e2e7ff);
-  background: -o-linear-gradient(left, #ffffff, #e2e7ff);
-  background: -moz-linear-gradient(left, #ffffff, #e2e7ff);
-  background: linear-gradient(left, #ffffff, #e2e7ff);
+  background: -webkit-linear-gradient(135deg, #036564, #3B3C59);
+  background: -o-linear-gradient(135deg, #036564, #3B3C59);
+  background: -moz-linear-gradient(135deg, #036564, #3B3C59);
+  background: linear-gradient(135deg, #036564, #3B3C59);
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  color: white;
 }
 
 button:focus {
