--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,7 +26,7 @@ if (localStorage.getItem("token")) {
       <br/>
       <button class="login-button" onclick="signIn()">Submit</button>
       <br/><br/>
-      <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
+      <a href="signup" style="font-size:11px; text-decoration:none; color:white;">create an account</a>
     </div>
   </div>
 </body>
