popover changes, style confirm delete

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -21,8 +21,8 @@
 
   <div id='overlay' class='overlay'></div>
   <canvas id="c" style="z-index: 0"></canvas>
-  
-  <div id='qr-popover' class='qr-popover'></div>
+
+  <div id='popover' class='popover'></div>
 
   <div id="db-messages" class="db-messages"></div>
   <div id="sidebar" class="sidebar">
