--- a/public/style/style.css
+++ b/public/style/style.css
@@ -129,7 +129,7 @@
   border: none;
 }
 
-.qr-popover {
+.popover {
   position: absolute;
   display: none;
   top: 50%;
@@ -137,7 +137,7 @@
   margin-left: -127px;
   margin-top: -137px;
   width: 255px;
-  height: 275px;
+  height: auto;
   background: white;
   border: 1px solid black;
   padding: 10px;
