--- a/public/views/database.html
+++ b/public/views/database.html
@@ -29,8 +29,8 @@
     <div class="spaces-title">Lensflare</div>
     <div id="space-links"></div>
     <!-- <br /><br />
-    <button class="test-button" onclick="loadMockData()" value="logout">loadMockData</button>
-    <button class="test-button" onclick="addItemTest()" value="logout">add item test</button> -->
+    <button class="test-button" onclick="loadMockData()" value="logout">loadMockData</button> -->
+    <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div>
   </div>
 
   <div id="db-name" class="db-title"></div>
