add new routing

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -24,7 +24,7 @@ if (localStorage.getItem("token")) {
       <div id="message" style="color:red; font-size:12px">
       </div>
       <br/>
-      <button class="login-button" onclick="signIn()">Submit</button>
+      <button type="submit" class="login-button" onclick="signIn()">Submit</button>
       <br/><br/>
       <a href="signup" style="font-size:11px; text-decoration:none; color:white;">create an account</a>
     </div>
