--- a/public/style/style.css
+++ b/public/style/style.css
@@ -266,6 +266,22 @@
   height: 100%;
 }
 
+#device-space-entry {
+  font-family: 'Raleway', sans-serif;
+  font-size: inherit;
+  border: 1px solid #dbe1ff;
+  border-radius: 4px;
+  resize: none;
+}
+
+#device-name-entry {
+  font-family: 'Raleway', sans-serif;
+  font-size: inherit;
+  border: 1px solid #dbe1ff;
+  border-radius: 4px;
+  resize: none;
+}
+
 input {
   autocomplete: "off";
 }
