--- a/public/views/database.html
+++ b/public/views/database.html
@@ -28,9 +28,10 @@
   <div id="sidebar" class="sidebar">
     <div class="spaces-title">Lensflare</div>
     <div id="space-links"></div>
-    <!-- <br /><br />
-    <button class="test-button" onclick="loadMockData()" value="logout">loadMockData</button> -->
+    <!-- <br /><br /> -->
     <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div>
+    <br />
+    <button class="test-button" onclick="addItemTest()" value="logout">loadMockData</button>
   </div>
 
   <div id="db-name" class="db-title"></div>
