--- a/public/views/database.html
+++ b/public/views/database.html
@@ -31,7 +31,7 @@
     <!-- <br /><br /> -->
     <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div>
     <br />
-    <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick="addItemTest()">load mock data</a></div>
+    <!-- <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick="addItemTest()">load mock data</a></div> -->
   </div>
 
   <div id="db-name" class="db-title"></div>
