--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,6 +5,14 @@
   font-size: 40px;
 }
 
+.help-title {
+  font-weight: 300;
+  /*color: #3B3C59;*/
+  text-align: left;
+  color: white;
+  font-size: 95px;
+}
+
 .spaces-title {
   font-weight: 300;
   color: white;
@@ -24,6 +32,12 @@
   margin-top: -105px;
   margin-left: -160px;
   line-height: 150%;
+}
+
+.help-box {
+  padding-top: 25px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .db-content {
@@ -323,6 +337,20 @@ body {
   background: linear-gradient(135deg, #036564, #3B3C59);
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+}
+
+.help-body {
+  font-family: 'Raleway', sans-serif;
+  margin-right:0px;
+  background: -webkit-linear-gradient(135deg, #036564, #3B3C59);
+  background: -o-linear-gradient(135deg, #036564, #3B3C59);
+  background: -moz-linear-gradient(135deg, #036564, #3B3C59);
+  background: linear-gradient(135deg, #036564, #3B3C59);
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
